Add logo, fore-bird and back-bird in the bird-box

--- a/css/style.scss
+++ b/css/style.scss
@@ -30,4 +30,40 @@ img{
 	background-size: auto 600px;
 	background-position: top center;
 	background-attachment: fixed;
+	overflow: hidden;
+}
+
+.logo{
+	height: 100px;
+	width: 100%;
+	background-image: url(../images/black-bird-logo.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	position: absolute;
+	top: 50%;
+	margin-top: -50px;
+}
+
+.fore-bird{
+	width: 960px;
+	height: 733px;
+	background-image: url(../images/fore-bird.png);
+	background-repeat: no-repeat;
+	/*background-color: transparentize(pink, 0.4);*/
+	background-position: right bottom;
+	position: absolute;
+	left: 50%;
+	margin-left: -480px;
+	top: 380px;
+}
+
+.back-bird{
+	width: 960px;
+	height: 298px;
+	background-image: url(../images/back-bird.png);
+	background-repeat: no-repeat;
+	background-position: top left;
+	position: absolute;
+	left: 50%;
+	margin-left: -480px;
 }
