--- a/css/style.css
+++ b/css/style.css
@@ -58,4 +58,14 @@ img {
   left: 50%;
   margin-left: -480px; }
 
+.clothes-pics figure {
+  margin-bottom: 20px;
+  position: relative;
+  opacity: 0;
+  transform: translateX(-20px);
+  transition: all 0.3s ease-in-out; }
+.clothes-pics .is-showing {
+  opacity: 1;
+  transform: translateX(0px); }
+
 /*# sourceMappingURL=style.css.map */
