--- a/css/style.scss
+++ b/css/style.scss
@@ -82,3 +82,15 @@ img{
 		transform: translateX(0px);
 	}
 }
+
+// Large-window
+.large-window {
+  height: 640px;
+  background-image: url(../images/model2.jpg);
+  background-position: center 0px;
+  background-repeat: repeat-y;
+  background-attachment: fixed;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  border-radius: 50%;
+  position: relative; }
