--- a/css/style.css
+++ b/css/style.css
@@ -58,15 +58,35 @@ img {
   left: 50%;
   margin-left: -480px; }
 
-.clothes-pics figure {
-  margin-bottom: 20px;
-  position: relative;
-  opacity: 0;
-  transform: translateX(-20px);
-  transition: all 0.3s ease-in-out; }
-.clothes-pics .is-showing {
-  opacity: 1;
-  transform: translateX(0px); }
+.clothes-pics {
+  margin-bottom: 100px; }
+  .clothes-pics figure {
+    margin-bottom: 20px;
+    position: relative;
+    opacity: 0;
+    transform: translateX(-20px);
+    transition: all 0.3s ease-in-out;
+    overflow: hidden;
+    cursor: pointer; }
+  .clothes-pics .is-showing {
+    opacity: 1;
+    transform: translateX(0px); }
+    .clothes-pics .is-showing img {
+      display: block;
+      transform: scale(1); }
+    .clothes-pics .is-showing:hover figcaption {
+      right: 0%; }
+    .clothes-pics .is-showing:hover img {
+      transform: scale(1.1); }
+  .clothes-pics figcaption {
+    position: absolute;
+    bottom: 10px;
+    right: -100%;
+    background: black;
+    color: white;
+    padding: 2px 8px;
+    font-size: 11px;
+    transition: all 0.3e ease-in-out; }
 
 .large-window {
   height: 640px;
