--- a/css/style.scss
+++ b/css/style.scss
@@ -70,18 +70,47 @@ img{
 
 // Model Grid
 .clothes-pics{
+	margin-bottom: 100px;
 	figure{
 		margin-bottom: 20px;
 		position: relative;
 		opacity: 0;
 		transform: translateX(-20px);
 		transition: all 0.3s ease-in-out;
+		overflow: hidden;
+		cursor: pointer;
 	}
 	& .is-showing{
 		opacity: 1;
 		transform: translateX(0px);
-	}
+		img{
+			display: block;
+			transform: scale(1);
+		}
+
+		&:hover{
+			figcaption{
+				right: 0%;
+			}
+			img{
+				transform: scale(1.1);
+			}
+		}
+     }
+
+    figcaption{
+		position: absolute;
+		bottom: 10px;
+		right: -100%;
+		background: black;
+		color: white;
+		padding: 2px 8px;
+		font-size: 11px;
+		transition: all 0.3e ease-in-out;
+	} 
 }
+
+
 
 // Large-window
 .large-window {
