--- a/css/style.css
+++ b/css/style.css
@@ -98,5 +98,38 @@ img {
   margin-bottom: 100px;
   border-radius: 50%;
   position: relative; }
+  .large-window .window-tint {
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  .large-window .promo-text {
+    color: white;
+    font-weight: 100px;
+    font-size: 50px;
+    line-height: 1.2; }
+    .large-window .promo-text strong {
+      display: block;
+      font-size: 30px; }
+    .large-window .promo-text span {
+      font-weight: 300;
+      font-size: 18px;
+      font-style: italic;
+      color: rgba(255, 255, 255, 0.6); }
+  .large-window .window-cta {
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 10px 20px; }
+    .large-window .window-cta:hover {
+      background: white;
+      color: black; }
 
 /*# sourceMappingURL=style.css.map */
