--- a/css/style.scss
+++ b/css/style.scss
@@ -110,8 +110,6 @@ img{
 	} 
 }
 
-
-
 // Large-window
 .large-window {
   height: 640px;
@@ -122,4 +120,55 @@ img{
   margin-top: 100px;
   margin-bottom: 100px;
   border-radius: 50%;
-  position: relative; }
+  position: relative; 
+
+  .window-tint{
+  	background:rgba(0,0,0,0.5);
+  	position: absolute;
+  	top: 0px;
+  	bottom: 0px;
+  	left: 0px;
+  	right: 0px;
+  	border-radius: 50%;
+  	display: flex;
+  	justify-content: center;
+  	align-items: center;
+  }
+  .promo-text{
+  	color: white;
+  	font-weight: 100px;
+  	font-size: 50px;
+  	line-height: 1.2;
+  	strong{
+  		display: block;
+  		font-size: 30px;
+  	}
+  	span{
+  		font-weight: 300;
+  		font-size: 18px;
+  		font-style:italic;
+  		color: rgba(255,255,255,0.6)
+  	}
+  }
+
+  .window-cta{
+  	font-size: 20px;
+  	text-decoration: none;
+  	color: white;
+  	border: 1px solid white;
+  	padding: 10px 20px;
+
+  	&:hover{
+  		background:white;
+  		color: black;
+  	}
+
+  }
+
+}
+
+
+
+
+
+
