Apply blog-posts section and apply floating elements parallax effect

--- a/css/style.css
+++ b/css/style.css
@@ -132,4 +132,23 @@ img {
       background: white;
       color: black; }
 
+.blog-posts {
+  margin-top: 100px;
+  position: relative; }
+  .blog-posts .post {
+    border: 1px solid #e1e1e1;
+    padding: 20px 20px 0px;
+    background-color: white; }
+  .blog-posts .col-md-3 {
+    margin-left: 4%;
+    margin-right: 4%; }
+  .blog-posts .btn-default {
+    background: transparent; }
+  .blog-posts .post-1 {
+    transform: translate(100px, 20px); }
+  .blog-posts .post-2 {
+    z-index: 2; }
+  .blog-posts .post-3 {
+    transform: translate(-100px, 20px); }
+
 /*# sourceMappingURL=style.css.map */
