--- a/css/style.scss
+++ b/css/style.scss
@@ -150,20 +150,45 @@ img{
   		color: rgba(255,255,255,0.6)
   	}
   }
-
   .window-cta{
   	font-size: 20px;
   	text-decoration: none;
   	color: white;
   	border: 1px solid white;
   	padding: 10px 20px;
-
   	&:hover{
   		background:white;
   		color: black;
   	}
-
   }
+}
+
+// posts
+.blog-posts{
+	margin-top: 100px;
+	position: relative;
+	.post{
+		border: 1px solid #e1e1e1;
+		padding: 20px 20px 0px;
+		background-color: white;
+	}
+.col-md-3{
+	margin-left: 4%;
+	margin-right: 4%;
+}	
+.btn-default{
+	background:rgba(0,0,0,0);
+	}
+.post-1{
+	transform:translate(100px, 20px);
+}	
+
+.post-2{
+	z-index: 2;
+}
+.post-3{
+	transform: translate(-100px,20px);
+}
 
 }
 
