--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ img {
   background-size: auto 600px;
   background-position: top center;
   background-attachment: fixed;
-  overflow: hidden; }
+  overflow: hidden;
+  z-index: 2; }
 
 .logo {
   height: 100px;
@@ -150,5 +151,15 @@ img {
     z-index: 2; }
   .blog-posts .post-3 {
     transform: translate(-100px, 20px); }
+
+footer {
+  background: black;
+  color: white;
+  padding: 40px 0px; }
+  footer .footer-stuff {
+    max-width: 640px;
+    margin: 0 auto; }
+  footer a {
+    color: white; }
 
 /*# sourceMappingURL=style.css.map */
