--- a/css/style.scss
+++ b/css/style.scss
@@ -31,6 +31,7 @@ img{
 	background-position: top center;
 	background-attachment: fixed;
 	overflow: hidden;
+	z-index: 2;
 }
 
 .logo{
@@ -189,8 +190,22 @@ img{
 .post-3{
 	transform: translate(-100px,20px);
 }
-
 }
+
+//Footer
+footer{
+	background: black;
+	color: white;
+	padding: 40px 0px;
+	.footer-stuff{
+		max-width: 640px;
+		margin: 0 auto;
+	}
+	a{
+		color: white;
+	}
+}
+
 
 
 
